2002-04-15  Masatake YAMATO  <yamato@redhat.com>

	* COPYING.LIB: New file.

	* despeckle.*: Change the license to LGPL.
	
	* input*.*: Likewise.

	* median.c: Likewise.

	* output-*.*: Likewise.

	* quantize.h: Likewise.

	* thin-image.*: Likewise.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.[ch] (at_exception_fatal, at_exception_warning): 
	added "const" to the passig parameter.

	* input-png.c (handle_warning, handle_error): Likewise.
	(init_structs): Cast handle_error and handle_warning that
	are passed to png_create_read_struct.
	(load_image): make width, height and row unsigned short.
	Casted values returned from png_get_image_width.

	Message-ID: <3CAEC662.41EEE71A@gmx.net>.

2002-04-03  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Tag naming scheme): Updated.

	* autotrace.spec.in: Updated.

	* configure.in: Version 0.30.

	* exception.c (at_exception_new): Fix wrong 
	parameter declaration.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.h (at_exception_new): Fix wrong 
	parameter declaration.

	* input-pnm.c (struct _PNMRowInfo): Removed.

	Message-ID: <3CA9F839.6A4C291C@gmx.net>.
	
2002-03-30  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer): printed
	warning if autotrace runs on windows.

	* autotrace.dsp: Updated.

	* autotrace.vcproj: Updated.

	Message-ID: <3CA74273.90B1D7EF@gmx.net>.

2002-03-30  Martin Weber <martweb@gmx.net>

	* main.c: fixed to remove some compiler warnings in
	main.c
	(dump): used at_bitmap_get_planes.

	Message-ID: <3CA737A7.40D2330D@gmx.net>.

2002-03-31  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Create a pre release(0.30pre2).

2002-03-30  Martin Weber <martweb@gmx.net>

	* output-emf.c: Removed unnecessary #define, 
	set pen width to zero when in outline mode. Now checking whether 
	it should write to stdout only for Windows.

	Message-ID: <3CA4C008.8B921285@gmx.net>.
	
2002-03-30  Martin Weber <martweb@gmx.net>
